# ai-orchestra

./: .coderabbit.yaml  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  Taskfile.yml  presets.json  pyproject.toml  pyrightconfig.json
.claude/: Plans.archive.md  Plans.md  orchestra.json
.claude/agents/: architecture-reviewer.md  debugger.md  researcher.md  specialized-mcp-builder.md
.claude/rules/: cocoindex-usage.md  codex-delegation.md  codex-suggestion-compliance.md  gemini-delegation.md  orchestra-usage.md
.codex/: AGENTS.md  config.toml
.codex/rules/: ai-orchestra.rules
.gemini/: GEMINI.md  settings.json
.github/workflows/: publish.yml  python-ci.yml  release.yml
agents/: ai-architect.md  ai-dev.md  api-designer.md  architect.md  architecture-reviewer.md  auth-designer.md  backend-go-dev.md  backend-python-dev.md  code-reviewer.md  data-modeler.md  debugger.md  frontend-dev.md  general-purpose.md  performance-reviewer.md  rag-engineer.md  researcher.md  security-reviewer.md  spec-reviewer.md  spec-writer.md  tester.md
ai_orchestra/: __init__.py  cli.py
config/: cli-tools.yaml  orchestration-flags.yaml
docs/: DESIGN.md  migration-guide.md
docs/adr/: ADR-20260216-001.md  ADR-20260219-002.md  ADR-20260223-003.md  ADR-20260223-005.md  ADR-20260302-006.md  ADR-20260307-007.md  ADR-20260308-008.md  ADR-20260313-009.md  ADR-20260315-006.md  ADR-20260315-010.md  ADR-20260322-010.md  ADR-20260322-011.md  ADR-20260322-012.md  ADR-20260409-013.md  ADR-20260412-014.md  ADR-20260414-015.md  ADR-20260419-016.md  ADR-20260421-017.md  DECISIONS.md  (+2 more)
facets/: README.md
hooks/: agent-router.py  check-codex-before-write.py  hook_common.py  log-cli-tools.py  tmux-session-end.py  tmux-session-start.py  tmux-subagent-stop.py  tmux_common.py
rules/: codex-delegation.md  config-loading.md  gemini-delegation.md  orchestra-usage.md
scripts/: analyze-cli-usage.py  dogfood.py  facet_builder.py  gtr-post-create.sh  orchestra-manager.py  orchestra_context.py  orchestra_hooks.py  sync-orchestra.py
taskfiles/: dogfood.yml  kpi.yml  list.yml  maintenance.yml  scaffold.yml  sync.yml
templates/: agent-template.md  project-settings.json  skill-template.md
tests/: __init__.py  conftest.py  module_loader.py  test_agent_router.py  test_agent_routing_consistency.py  test_cli_detection.py  test_config_loading.py  test_context_hooks.py  test_context_store.py  test_facet_build.py  test_handoff.py  test_load_task_state.py  test_log_cli_tools.py  test_log_common.py  test_orchestra_manager_context.py  test_orchestra_manager_gitignore.py  test_package_resources.py  test_route_audit_orchestration_hooks.py  test_suggest_gemini_research.py  test_sync_agent_model.py  test_sync_claudeignore.py  test_sync_facet_force.py
(+144 files in other folders)
