[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-orchestra"
version = "0.1.0"
description = "Multi-agent orchestration framework for Claude Code + Codex CLI + Gemini CLI"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = []

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".claude", ".git", "__pycache__", "templates"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = [
    "E501",  # line too long (ruff format handles code; strings/comments are acceptable)
    "E402",  # module level import not at top (legitimate sys.path manipulation in hooks)
    "E741",  # ambiguous variable name (common in short list comprehensions)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
python_files = "test_*.py"
