[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "orchex"
dynamic = ["version"]
description = "Multi-agent orchestration framework for Claude Code + Codex CLI + Gemini CLI"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0"]
readme = "README.md"
license = "MIT"

[project.scripts]
orchex = "ai_orchestra.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["ai_orchestra"]

[tool.hatch.build.targets.wheel.force-include]
"packages" = "ai_orchestra/packages"
"templates" = "ai_orchestra/templates"
"scripts" = "ai_orchestra/scripts"
"presets.json" = "ai_orchestra/presets.json"

[tool.hatch.build.targets.sdist]
include = [
    "ai_orchestra/",
    "packages/",
    "templates/",
    "scripts/",
    "presets.json",
    "README.md",
    "CLAUDE.md",
    "pyproject.toml",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "ai_orchestra/_version.py"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".claude", ".git", "__pycache__", "templates"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = [
    "E501",  # line too long (ruff format handles code; strings/comments are acceptable)
    "E402",  # module level import not at top (legitimate sys.path manipulation in hooks)
    "E741",  # ambiguous variable name (common in short list comprehensions)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
python_files = "test_*.py"
